# backend-i-2025

.devcontainer/: devcontainer.json
final_project/: .env.example  Dockerfile  Makefile  README.MD  compose.yaml  entrypoint.sh  pyproject.toml
final_project/.devcontainer/: devcontainer.json
final_project/books/: admin.py  forms.py  models.py  test_views.py  urls.py  views.py
final_project/books/migrations/: 0001_initial.py  0002_rename_readingsessions_readingsession.py
final_project/books/templates/: base.html
final_project/books/templates/books/: book_confirm_delete.html  book_detail.html  book_form.html  book_list.html
final_project/books/templates/registration/: login.html
final_project/booktracker/: settings.py  urls.py
final_project/cli/: cli.py  main.py
final_project/tests/: test_cli.py  test_models.py  test_views.py
final_project/tests_cli/: pytest.ini
final_project/tests_django/: conftest.py  test_forms.py  test_urls.py
session_01/: pyproject.toml
session_01/src/session_01/Exercise/: main.py
session_01/src/session_01/Exercise_Challenge/: main.py  pyproject.toml
session_02/: pyproject.toml
session_02/src/session_02/: comprehensions.py
session_02/src/session_02/Exercise/: main.py
session_02/src/session_02/Exercise_Challenge/: main.py
session_03/: pyproject.toml
session_03/src/session_03/Exercise_with_Challenge/: main.py
session_04/: pyproject.toml
session_04/src/session_04/Exercise/: main.py
session_04/src/session_04/Exercise_Challenge/: main.py
session_05/: pyproject.toml
session_05/src/session_05/Exercise/: main.py
session_05/src/session_05/Exercise_Challenge/: main.py
session_06/: pyproject.toml
session_06/src/session_06/exercise/: main.py  main_test.py
session_06/src/session_06/exercise_challenge/: main.py  test_main.py
session_07/: pyproject.toml
session_07/src/session_07/Exercise/: main_class.py  main_contxtlib.py
session_07/src/session_07/Exercise_Challenge/: main.py
session_07/src/session_07/Exercise_Super_Challenge/: main.py  user_data.db
session_08/: pyproject.toml
session_08/src/session_08/Exercise_with_Challenge/: main.py  test_main.py
session_09/: pyproject.toml
session_09/src/session_09/exercise_with_challenge/: bot.py  cli.py
session_09/tests/: test_bot.py
session_10/: pyproject.toml
session_10/src/session_10/exercise_with_challenge/: http_server.py
session_10/tests/: test_http_server.py
session_11/: pyproject.toml
session_11/src/session_11/exercise_with_challenge/: main.py
session_11/tests/: test_main.py
session_12/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  nginx.conf  pyproject.toml
session_12/src/session_12/: main.py  models.py
session_12/src/session_12/exercise_with_challenge/: main.py
session_12/tests/: test_main.py
session_13/: Dockerfile  Makefile  compose.yaml  pyproject.toml  test.db
session_13/src/session_13/: database.py  main.py
session_13/src/session_13/exercise_with_challenge/: main.py
session_13/tests/: test_main.py
session_14/: DockerFile  Makefile  compose.yaml  pyproject.toml
session_14/djproject/: DockerFile  compose.yaml  pyproject.toml  settings.py  urls.py
session_14/src/session_14/exercise_with_challenge/core/: models.py
session_14/todo/: admin.py  forms.py  models.py  urls.py  views.py
session_14/todo/migrations/: 0001_initial.py
session_14/todo/templates/: base.html
session_14/todo/templates/registration/: login.html  signup.html
session_14/todo/templates/todo/: index.html  task_list.html
session_14/todo/tests/: test_views.py
