[project]
name = "session-02"
version = "0.1.0"
description = ""
authors = [
    {name = "cstriker421",email = "cstriker421@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
[project.scripts]
comprehensions="session_02.comprehensions:main"

[tool.poetry]
packages = [{include = "session_02", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
