[project]
name = "session-14"
version = "0.1.0"
readme = "README.md"
description = ""
authors = [
    {name = "cstriker421",email = "cstriker421@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "djproject"}]


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.10.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djproject.settings"